# Calculator

./: CMakeLists.txt  General.h  Main.cpp  Operations.cpp  ParseTree.cpp  README.md  Tokenization.cpp
HeaderFiles/: operators.h  parsetree.h
source/: Main.cpp
source/computation/: Operations.cpp  Operations.h
source/handlers/: ErrorHandler.cpp  ErrorHandler.h  StringUtils.cpp  StringUtils.h
source/logic/: ParseTree.cpp  ParseTree.h
